fixed margin issue and alignment of profile pic

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ h1, h2, h3, h4, h5, a, p, span, body, div {font-weight: normal; font-family: 'La
 .header-profile-picture, .header-text {display: inline-block;}
 .header-name h1 {margin: 0;}
 .header-subtitle {margin-bottom: 12px;}
-.header-profile-picture {width: 130px; height: 130px; margin-right: 12px; border-radius: 50%; background-image: url(files/me.jpeg); background-position: center; background-size: contain;}
+.header-profile-picture {width: 130px; height: 130px; margin-right: 12px; border-radius: 50%; background-image: url(files/me.jpeg); background-position: center; background-size: contain; vertical-align: middle;}
 .content {max-width: 748px; padding-left: 16px; padding-right: 16px; margin: auto; margin-top: 48px;}
 .hr {width: 100%; height: 1px; margin: 48px 0; background-color: #d6dbdf;}
 a {color: #2471a3; text-decoration: none;}
@@ -32,7 +32,7 @@ p {line-height: 1.5em;}
 .img-contain {background-size: contain !important;}
 .footer {background-color: #345; width: 100%}
 .footer-content {color: #fff; font-size: 10px; padding: 6px 0; max-width: 968px; margin: auto;}
-.header-icon {display: block; float: left; margin: 5px; background-position: center; background-size: contain; background-repeat: no-repeat; border-radius: 6px;width: 30px; height: 30px;}
+.header-icon {display: block; float: left; margin: 15px; background-position: center; background-size: contain; background-repeat: no-repeat; border-radius: 6px;width: 30px; height: 30px;}
 @media only screen and (max-width: 1150px) {
     .header-profile-picture, .header-text {display: block; margin: auto; text-align: center;}
     .header-profile-picture {margin-bottom: 12px; width: 140px; height: 140px;}
